--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^2.0.2",
+    "@sanity/image-url": "^1.0.2",
     "@tailwindcss/line-clamp": "^0.4.2",
     "next": "13.2.4",
+    "next-sanity": "^4.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "@sanity/vision": "^3.0.0",
+    "sanity": "^3.0.0",
+    "styled-components": "^5.2.0",
+    "@sanity/eslint-config-studio": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
